--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -7,14 +7,17 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
-
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
+  <div style="margin: 20px;">
+    <h2>Acepta las notificaciones</h2>
+    <ion-button (click)="afiliarNotificaciones()">Aceptar Notificaciones</ion-button>
   </div>
+
+
+<div style="margin: 12px; align-content: center;">
+  <h1>{{titulo}}</h1>
+  <p >{{contenido}}</p>
+<ion-button (click)="getMessage()">Obtener Mensaje</ion-button>
+<p>{{token}}</p>
+</div>
+
 </ion-content>
