guardado de token para notis push

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Blank
+      ¡Que hermoso dia tenemos hoy!
     </ion-title>
   </ion-toolbar>
 </ion-header>
